# COSICoin

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  cross-build.sh  gendemoscripts.py  servers.txt  settings.json  settings_demo.json
include/: block.h  client.h  common.h  database.h  hash.h  message.h  node.h  server.h  transaction.h
include/blockchain/: block.h  header.h  input.h  message.h  output.h  transaction.h  utxo.h
include/bracha/: logging.h  node.h
include/comms/: client.h  server.h
include/config/: settings.h
include/cryptowallet/: validator.h  wallet.h
include/database/: database.h
include/interf/: wrapper.h
include/json/: jsonparser.h
include/signature/: hash.h  sha256.h
lib/blockchain/: block.cc  header.cc  input.cc  message.cc  output.cc  transaction.cc
lib/bracha/: logging.cc  node.cc
lib/comms/: client.cc  server.cc
lib/config/: settings.cc
lib/cryptowallet/: jsonparser.cc  validator.cc  wallet.cc
lib/database/: database.cc
lib/hashing/: hash.cc  sha256.cc
lib/interf/: interface.c  wrapper.c  wrapper.cc
lib/json/: jsonparser.cc
lib/signature/: hash.cc  sha256.cc
protos/: chat.proto
src/: client_ex.cc  database_test_ex.cc  demo.cc  hash_test_ex.cc  hash_timings.cc  log_test.cc  node_ex.cc  node_test_ex.cc  server_client_test.cc  server_ex.cc  validator_ex.cc  wallet_interactive.cc
test/: block_test.cc  database_test.cc  hash_test.cc  header_test.cc  input_test.cc  message_test.cc  output_test.cc  settings_test.cc  transaction_test.cc  transform_test.cc  utxo_test.cc  wrapper_test.cc
tx/: tx1.json  tx2.json
verilog_code/: CMakeLists.txt  fpgautils  main.c  rsa.v  tb_rsa_wrapper.v
